Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36491

Server crashes in Item_func_group_concat::print

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • N/A
    • 12.0.1
    • GIS
    • None

    Description

      SELECT 1 FROM dual WHERE group_concat(1, 1);
      

      bb-12.0-mdev-34120-gis-functions branch

      Version: '12.0.0-MariaDB-debug-log'  
      250404 20:10:26 [ERROR] /11/sql/mariadbd got signal 11 ;
       
      Server version: 12.0.0-MariaDB-debug-log source revision: 5a523dc636413a6bea55c9cd09b6cd6c00d5c92c
      sql/signal_handler.cc:230(handle_fatal_signal)[0x55db6d2f0363]
      sigaction.c:0(__restore_rt)[0x7f7521b6f420]
      sql/item_sum.cc:4565(Item_func_group_concat::print(String*, enum_query_type))[0x55db6d63f375]
      sql/item.cc:11298(dbug_print_item(Item*))[0x55db6d3b338f]
      sql/sql_select.cc:1445(JOIN::prepare(TABLE_LIST*, Item*, unsigned int, st_order*, bool, st_order*, Item*, st_order*, st_select_lex*, st_select_lex_unit*))[0x55db6ca1718c]
      sql/sql_select.cc:5350(mysql_select(THD*, TABLE_LIST*, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x55db6ca413e9]
      sql/sql_select.cc:633(handle_select(THD*, LEX*, select_result*, unsigned long long))[0x55db6ca0ea44]
      sql/sql_parse.cc:6191(execute_sqlcom_select(THD*, TABLE_LIST*))[0x55db6c928f0a]
      sql/sql_parse.cc:3979(mysql_execute_command(THD*, bool))[0x55db6c918ab6]
      sql/sql_parse.cc:7915(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x55db6c933fae]
      sql/sql_parse.cc:1904(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x55db6c90a3d2]
      sql/sql_parse.cc:1415(do_command(THD*, bool))[0x55db6c907069]
      sql/sql_connect.cc:1415(do_handle_one_connection(CONNECT*, bool))[0x55db6ce21a3a]
      sql/sql_connect.cc:1329(handle_one_connection)[0x55db6ce2158d]
      perfschema/pfs.cc:2200(pfs_spawn_thread)[0x55db6db6642c]
      nptl/pthread_create.c:478(start_thread)[0x7f7521b63609]
       
      Query (0x62d0003e84a8): SELECT 1 FROM dual WHERE group_concat(1, 1)
      

      is caused by

      commit f052381263e4c696f4230e61b55a5c5863c83c66
      Author: Dave Gosselin <dave.gosselin@mariadb.com>
      Date:   Wed Jan 29 16:46:24 2025 -0500
       
          MDEV-35975 Server crashes after CREATE VIEW as SELECT ST_COLLECT...
          
          Ensure that orig_args is populated during Item_func_collect::fix_fields_impl
      

      Attachments

        Issue Links

          Activity

            People

              Gosselin Dave Gosselin
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.25h
                  2.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.