MDEV-36491 Server crashes in Item_func_group_concat::print

Initialize orig_args with nullptr and allocate it if it hasn't yet
been allocated, either during construction or during fix_fields(),
depending on use.  THe SQL layer calls print() on conditions as a
way of validating that they're correct, but in the case of
Item_func_group_concat, this crashed because orig_args was not
allocated by that point for the test case included in this commit.